fixed bar chart on mobile

--- a/components/buttons/dropdownButton.scss
+++ b/components/buttons/dropdownButton.scss
@@ -17,7 +17,7 @@
     /* MARGINS AND PADDING */
     @apply px-2 pb-2 m-0;
     /* LAYOUT */
-    @apply absolute flex flex-col top-0 left-1/2 -translate-x-1/2 translate-y-11 z-50 gap-1;
+    @apply absolute flex flex-col bottom-0 left-1/2 -translate-x-1/2 -translate-y-11 z-50 gap-1;
     /* BORDERS */
     /* COLORS */
     /* TEXT */
